supporting raw file path in provisioning util and fixing few tests relying on environment
git-svn-id: https://svn.apache.org/repos/asf/tomee/tomee/trunk@1620053 13f79535-47bb-0310-9956-ffa450edef68