@@ -152,7 +152,12 @@ public final class ProvisioningUtil {
         } else { // try url
             try {
                 final File file = cacheFile(lastPart(rawLocation));
-                final URL url = new URL(rawLocation);
+                final File local = new File(rawLocation);
+                if (local.isDirectory()) {
+                    return local.getAbsolutePath();
+                }
+
+                final URL url = local.isFile() ? local.toURI().toURL() : new URL(rawLocation);
                 InputStream is = null;
                 try {
                     is = new BufferedInputStream(url.openStream());
